--- a/reactor-core/pom.xml
+++ b/reactor-core/pom.xml
@@ -8,11 +8,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>reactor-core</name>
 
-    <parent>
-        <groupId>com.baeldung</groupId>
-        <artifactId>parent-modules</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
+    <properties>
+        <reactor.version>3.4.9</reactor.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
+        <java.version>1.8</java.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -34,8 +35,18 @@
         </dependency>
     </dependencies>
 
-    <properties>
-        <reactor.version>3.4.9</reactor.version>
-    </properties>
+    <build>
+    <plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
+        </configuration>
+    </plugin>
+    </plugins>
+    </build>
 
 </project>
